react-app/src/components/generatorsDisplay/GeneratorCard.css
.gen-card{
    display: flex;
    justify-content: space-between;
    box-shadow: 0px 0px 5px lightcyan;
    border-radius: 5px;
    margin: 10px;
    padding: 10px;
    background-color: rgb(75, 75, 75);
    width: 91%;
    max-width: 1000px;
    flex-wrap: wrap;
}

.card-leftside{
    display: flex;
    flex-direction: column;
    /* flex-basis: content; */
    max-width: 375.83px;
    width: 100%;

}

.pw-display{
    height: 30px;
    border-radius: 5px;
    /* width: 100%; */
    font-size: x-large;
    cursor:text;
    /* background-color: rgb(235, 210, 200);
    color: black; */
}

.gen-title{
    margin: 5px;
    margin-bottom: 10px;
    font-size: xx-large;
    overflow-x: scroll;
    max-width: 100%;
}

.gen-label{
    margin: 5px;
    margin-bottom: 10px;
    font-size: x-large;
}

.pw{
    display: flex;
    flex-wrap: wrap;
}

.leftside-gen-buttons{
    display: flex;
    justify-content: space-between;
    margin-bottom: 5px;
    flex-wrap: wrap;
}

.iteration{
    display: flex;
}

.iterator-label{
    margin-right: 5px;
    text-align: center;
    padding: 5px;
}

.iteration-display{
    /* margin-right: 5px;
    margin-left: 5px; */
    color: black;
    background-color: rgb(225, 205, 190);
    text-align: center;
    padding: 5px;
    justify-self: center;
}

.iteration button{
    padding-left: 10px;
    padding-right: 10px;
    border-right: 1px solid rgba(0, 0, 0, .1);
    border-left: 1px solid rgba(0, 0, 0, .1);
}

.decrement{
    border-radius: 5px 0 0px 5px;
}

.increment{
    border-radius: 0px 5px 5px 0px;
}

.card-rightside{
    display: flex;
    flex-direction: column;
    width: 25%;
    justify-content: center;

}

.card-rightside button{
    width: 100%;
    margin: 5px;
    height: 30px;
}

.card-rightside .new-gen-buttons > button{
    margin-top: 30px;
}

@media only screen and (max-width: 580px){
    .gen-card{
        flex-direction: column;
    }

    .card-rightside{
        flex-direction: row;
        /* align-self: center; */
        justify-content: space-between;
        width: 100%;
    }
    .card-rightside button{
        height: 40px;
    }

    .hover-hint #itr-hint{
        width: 105px;
        height: 50px;
        bottom: 260%;
        left: 50%;
        overflow-y: scroll;
    }

    .card-rightside .new-gen-buttons > button{
        height: 30px;
    }

}


@media only screen and (max-width: 420px){
    .leftside-gen-buttons{
        margin-top: 5px;
    }
}

@media only screen and (max-width: 300px){
    .iterator-label{
        display: none;
    }
    .leftside-gen-buttons{
        width: 100%;
    }
    .pw-display{
        width: 100%;
    }

    .card-rightside{
        margin-left: -7px;
    }
}

